# RepoRELAY

./: .env.example  .gitignore  DATA_ENGINEERING_TODO.md  Dockerfile.api  GITHUB_ACTIONS_SETUP.md  NEXT.md  README.md  TODO.md  considerations.md  deployment_issues.md  improvements.md  inspirations.md  justfile  next-project.md  publicTodo.md  pyproject.toml  render.yaml  seed.md
.github/workflows/: ping.yml
apps/api/src/reporelay_api/: main.py
apps/mvp_api/: pyproject.toml
apps/mvp_api/src/reporelay_mvp_api/: main.py
apps/site/src/layouts/: Base.astro
apps/site/src/lib/: api.ts
apps/site/src/pages/: explore.astro  index.astro
apps/site/src/pages/repo/[owner]/: [name].astro
apps/site/src/styles/: global.css
compass/: 08-user-flow.md  09-recommendation-systems.md  10-data-collection-design.md  11-database-management.md
infra/: docker-compose.yml
infra/postgres/: Dockerfile
