[project]
name = "reporelay-mvp-api"
version = "0.1.0"
description = "FastAPI server for the RepoRelay MVP recommender"
requires-python = ">=3.12"

dependencies = [
    "reporelay-mvp",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporelay_mvp_api"]
